# mcode

./: .env.example  .gitignore  .llc.yaml  1  CLAUDE.md  LICENSE  MAXAGENT.md  README.md  TODO-history.md  TODO.md  config.yaml.example  pyproject.toml  solve_equation.py
.github/: copilot-instructions.md
demo/: README.md  snake_game.py
demo/multiplayer_snake/: game_logic.py  websocket_manager.py
docs/: 上下文汇总功能.md  上下文汇总工具.md  多Agent协作测试.md  多Agent协作测试提示词.md  技术架构.md  测试报告-并行ToolCalls.md  详细设计.md
docs/research/: llm-file-editing-best-practices.md
scripts/: PARALLEL_TEST_README.md  TESTING_GUIDE.md  run_parallel_test.sh  start_litellm_copilot.py  test_batch_edit.py  test_multiagent.sh  test_parallel_tool_calls.py
src/maxagent/: __init__.py  __main__.py
src/maxagent/agents/: __init__.py  architect.py  coder.py  tester.py
src/maxagent/auth/: __init__.py  github_copilot.py
src/maxagent/cli/: __init__.py  auth_cmd.py  chat.py  config_cmd.py  edit.py  main.py  mcp_cmd.py  models_cmd.py  task.py  test_cmd.py
src/maxagent/config/: __init__.py  agent_profiles.py  loader.py  schema.py
src/maxagent/core/: __init__.py  agent.py  instructions.py  orchestrator.py  prompts.py  thinking_strategy.py
src/maxagent/llm/: __init__.py  client.py  copilot_client.py  factory.py  models.py
src/maxagent/mcp/: __init__.py  client.py  config.py  tools.py
src/maxagent/tools/: __init__.py  base.py  command.py  edit.py  file.py  git.py  glob.py  grep.py  memory.py  registry.py  search.py  subagent.py  todo.py  webfetch.py
tests/: conftest.py  test_agent_file_read_dedup.py  test_agent_no_tools.py  test_agent_profiles_md.py  test_agent_request_callbacks.py  test_agent_tool_cache.py  test_agent_tool_planner.py  test_cli_chat_verbose.py  test_config_loader.py  test_context.py  test_context_summary.py  test_edit.py  test_excessive_edit_warning.py  test_github_copilot.py  test_llm_initiator.py  test_mcp.py  test_memory_injection.py  test_model_specific_config.py  test_prompts_environment_context.py  test_subagent_explore_batched.py  test_test_cmd.py  test_thinking_strategy.py  test_todo.py  test_tokens.py  test_tools_base.py
tests/e2e/: calculator.py  hello.py  test_context_e2e.py
(+14 files in other folders)
